enkrypcja na rozne typy plikow ok (ale nie tknelam jeszcze javy vf i dekrypcji bo zasnelam :(  )